# validation-gap

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
annotated_heads/: consistency_heads.json  random_heads.json
bash_scripts/: baseline_accuracy.sh  circuit_discovery.sh  data_generation.sh  eval_soft_intersection.sh  interpret_attn.sh  intervene_attn.sh  intervene_residual.sh  overlap_edges.sh  probing.sh
llm_error_detection/: utils.py
llm_error_detection/circuits/: circuit_analysis.py  circuit_discovery.py
llm_error_detection/circuits/interpret/: attention_analysis.py  query_key_analysis.py  vocabulary_projections.py
llm_error_detection/circuits/intervene/: attention_intervention.py  residual_intervention.py
llm_error_detection/circuits/probe/: probing.py
llm_error_detection/circuits/visualize/: graph_utils.py
llm_error_detection/data_prep/: math_filterer.py  math_generator.py  seq_label_generator.py
scripts/: circuit_template_intersection.py  eval_base_model.py  eval_circuit.py  eval_circuit_overlap.py  eval_intersection_circuit.py  eval_intersection_z1_z2.py  filter_math_data.py  gen_math_data.py  identify_circuit.py  interpret_attn.py  interpret_projections.py  intervene_attn.py  intervene_residual.py  num_edges_vs_train_size.py  plot_circuit.py  probe_residual.py  sparsity_vs_faithfulness.py
tests/circuit_tests/: test_intersection.py
